# C-_lib_learn

./: .gitignore  README.md
eigen_try/: CMakeLists.txt
eigen_try/src/: eigen_try1.cpp  eigen_try2.cpp
sophus_try/: CMakeLists.txt  sophus_study.cpp  useSophus.cpp
